fixed the spacing on the facts section
Now they can have 1-3 facts and they'll always be nicely spaced out because of m-auto on the facts div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,6 +567,9 @@ video {
 .justify-between {
   justify-content: space-between;
 }
+.justify-items-center {
+  justify-items: center;
+}
 .gap-1 {
   gap: 0.25rem;
 }
@@ -584,6 +587,9 @@ video {
 }
 .gap-10 {
   gap: 2.5rem;
+}
+.justify-self-center {
+  justify-self: center;
 }
 .border-2 {
   border-width: 2px;
